    ensures that there are no collisions between reference IDs or read group IDs. These features were added
    in PR#73.

  * Added ADAMRod model and Reads2Rods transformation; this is a pileup generation function that better takes
    advantage of locality for data that is already sorted. This was introduced in PR#36.

  OPTIMIZATIONS

  * Transformed phred --> double calculation into a LUT, which improves performance. This change was introduced
    into the API in PR#65 and was a breaking change. This change was then propegated into BQSR by PR#71.

  IMPROVEMENTS

  * ISSUE 92: improved the representation of the types of 'optional' fields from the BAM, and their encoding
    in the 'attributes' field of ADAMRecord.  This encoding now includes the type, and should no longer be 
    lossy, therefore making it possible to write code to re-export a BAM from the ADAM file in the future.

  * Added code to reference region model that allowed for the creation of regions from individual reads, and
    that allowed for adjacent non-overlapping regions to merge together. This was added in PR#73.

  * Added code to the projection package which allows for the creation of an inverse projection from a given
    projection. This was added in PR#61.

  * CLI option printout width was increased to 150 characters to improve display on large monitors. This was
    added by PR#91.

  * Various build improvements were added by PR#68 and PR#66.

  BUG FIXES

  * Fixed issues where VCF header was not being written correctly. This prevented variant calls from being
    written after conversion. This was fixed in PR#85.

  * Fixed a possible issue where pileup generation may have been ignoring reference ID when grouping pileups
    into rods. This was in PR#86. This necessitated changing the ADAMRod model which was introduced in PR#36;
    however, this is not an API breaking change as ADAMRod did not show up in a previous release.
